--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <ul class="nav top">
               <li><a href="#home">Home</a></li>
               <li><a href="#about">About</a></li>
-              <li><a href="#skills">Skills</a></li>
-              <li><a href="#projects">Projects</a></li>
+              <li><a href="#work">Work</a></li>
+              <li><a href="#events">Events</a></li>
               <li><a href="#contact">Contact</a></li>
           </ul>
       </nav>
@@ -41,8 +41,8 @@
           <ul class="nav bottom">
             <li><a href="#home" class="home">Home</a></li>
             <li><a href="#about" class="about">About</a></li>
-            <li><a href="#skills" class="skills">Skills</a></li>
-            <li><a href="#projects" class="projects">Projects</a></li>
+            <li><a href="#work" class="skills">Work</a></li>
+            <li><a href="#events" class="projects">Events</a></li>
             <li><a href="#contact" class="contact">Contact</a></li>
           </ul>
         </nav>
@@ -68,132 +68,48 @@
       <div class="aboutParent">
         <!-- Paragraph About Me -->
         <div>
-          <p>Hey, I'm Sarah. </p>
-          <p>I'm a front-end developer based in Toronto, Ontario. I love how coding lets me use creative problem solving to design and build user-focused, fun, and accessible applications.</p>
-          <p>I'm a graduate of Juno College's Web Development Immersive, as well as of the Juilliard School (MMus.) and McGill University (BMus). </p>
-          <p>As the world of web development is constantly evolving, I'm always looking to learn new skills and to collaborate with and learn from others. For more about me, feel free to download my resume.</p>
-          <div class="resume">
-            <a href="./assets/sarahGansResume.pdf" target="_blank">Download Resume</a>
-          </div>
+          <p>Originally from Montreal Laura Zacharin currently lives in Toronto. In 2018 Laura completed her Creative Writing Certificate at University of Toronto’s School of Continuing Studies and received the Marina Nemat Poetry Award. She was a finalist in 2018 for The Malahat Review’s Far Horizons Poetry Contest. In 2017 she attended the Emerging Writer’s Intensive at the Banff Centre. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review and Juniper. Her first book Common Brown House Moths was published in September 2019 (Frontenac House).</p>
         </div>
         <!-- Photo of Me-->
         <div class="picture">
-          <img src="./assets/sarahGansPhoto.jpg" alt="Photograph of Sarah Gans">
+          <img src="./assets/lauraZacharinPhoto.jpeg" alt="Photograph of Laura Zacharin">
         </div>
       </div>
       </div>
     </section>
     <!-- Skills Section -->
-    <section class="skills" id="skills">
+    <section class="about" id="work">
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
-        <h2>Skills</h2>
-        <div class="bodyLine"></div>
-        <!-- Grid -->
-        <div class="gridWrapper">
-          <!-- List of icons -->
-          <div class="icon">
-            <i class="devicon-visualstudio-plain"></i>
-            <p>VS Code</p>
-          </div>
-          <div class="icon">
-            <i class="devicon-html5-plain"></i>
-            <p>HTML5</p>
-          </div>
-          <div class="icon">
-            <i class="devicon-css3-plain"></i>
-            <p>CSS3</p>
-          </div>
-          <div class="icon">
-            <i class="devicon-sass-original"></i>
-            <p>Sass</p>
-          </div>
-          <div class="icon">
-            <i class="devicon-javascript-plain"></i>
-            <p class="js">JavaScript</p>
-          </div>
-          <div class="icon">
-            <i class="devicon-jquery-plain"></i>
-            <p>JQuery</p>
-          </div>
-          <div class="icon">
-            <i class="devicon-react-original"></i>
-            <p>React</p>
-          </div>
-          <div class="icon">
-            <img src="./assets/responsive.svg" alt="">
-            <p>Responsive Design</p>
-          </div>
-          <div class="icon">
-            <i class="devicon-github-plain"></i>
-            <p>GitHub</p>
-          </div>
-          <div class="icon">
-            <i class="devicon-git-plain"></i>
-            <p>Git</p>
-          </div>
-          <div class="icon">
-            <i class="fas fa-universal-access"></i>
-            <p>Accessibility</p>
-          </div>
-          <div class="icon">
-            <img src="./assets/output-onlinepngtools.png" alt="">
-            <p>Firebase</p>
-          </div>
+      <h2>Work</h2>
+      <div class="bodyLine"></div>
+      <div class="aboutParent">
+        <!-- Paragraph About Me -->
+        <div>
+          <h3>We Are the Repositories</h3>
+          <p>Deep in the meat of  this chewed up dogball   your amygdalaa tangle of  grunts and turns   blindloops crammed</p>
+          <p>into this pair of  shrivelled almonds between a rock and a hard placebetween prefrontal cortex and hippocampus   dense like gravity   taut</p>
+          <p>like the windings of  golfball innards   back and forth across suburban streets   loop after loop of  rubber strand stretched</p>
+          <p>from tree to tree in the spirit of  fun   just to see what would happen   unsuspecting drivers asleep</p>
+          <p>at the wheel   oblivious behind shatterproof  glass   ambushedby the skirl of  rubber band   its blowback</p>
+          <p>by a thing you’d best forgotten   thought you had   the smell of  talcum powder   cardamom and clove   five hummed notes “Killing Me Softly”</p>
+          <p>you can’t quite remember the words   a warm tomato   pink peachover a kitchen sink   chin dripping juice   sun through small</p>
+          <p>streaked window   lacy white curtain in a breeze   laughteryou almost recognize   a tone of  voice   an inflection   I’ve heard that some-</p>
+          <p>where   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpledon a basement bookshelf   newspages flapping  in a tree</p>
         </div>
+        <!-- Photo of Me-->
+        <div class="picture">
+          <img src="./assets/CommonBrownHousemoths.jpeg" alt="Photograph of Laura Zacharin">
+        </div>
+      </div>
       </div>
     </section>
     <!-- Projects Section -->
-    <section class="projects" id="projects">
+    <section class="about" id="events">
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
-        <h2>Projects</h2>
+        <h2>Events</h2>
         <div class="bodyLine"></div>
-        <!-- First Project -->
-        <div class="projectParent side">
-            <div>
-              <img class="project" src="./assets/front-view-of-macbook-pro.png" alt="Chirptronome application mockup on a computer screen.">
-            </div>
-            <div class="margin">
-            <h3>Chirptronome</h3>
-            <h4>React | Firebase | SCSS</h4>
-            <p>If you've ever wanted to practice your musical instrument with a bird chirp, you're in luck. Practice with the chirps
-            of the Chirptronome and store the tempo, meter, title, and composer of the music you're playing for another day.</p>
-            <div class="link">
-              <a href="https://sarahmgans.github.io/chirptronome/" target="_blank" rel="noreferrer">Live</a>
-              <a href="https://github.com/sarahmgans/chirptronome" target="_blank" rel="noreferrer">Github</a>
-            </div>
-          </div>
-        </div>
-        <div class="bodyLine seperator"></div>
-        <!-- Second Project -->
-        <div class="projectParent middle">
-          <div>
-            <h3>The Perfect Apple for You</h3>
-            <h4>HTML | SCSS | JavaScript | JQuery</h4>
-            <p>By the time you buy an apple, it's too late to know if you'll enjoy it or not. Now you can make sure that every time you buy an apple, it's the perfect apple. Get started on the quiz now to discover the perfect apple for you.</p>
-            <div class="link">
-              <a href="https://sarahmgans.github.io/thePerfectApple/" target="_blank" rel="noreferrer">Live</a>
-              <a href="https://github.com/sarahmgans/thePerfectApple" target="_blank" rel="noreferrer">Github</a>
-            </div>
-          </div>
-          <div>
-            <img class="project" src="./assets/front-view-of-macbook-pro3.png" alt="The Perfect Apple for You application mockup on a computer screen.">
-          </div>
-        </div>
-        <div class="bodyLine seperator"></div>
-        <!-- Third Project -->
-        <div class="projectParent side">
-          <div>
-            <img class="project" src="./assets/front-view-of-macbook-pro2.png" alt="Creative PSD conversion mockup on a computer screen.">
-          </div>
-          <div class="margin">
-            <h3>Creative</h3>
-            <h4>HTML | SCSS | JavaScript | jQuery</h4>
-            <p>A multi-page PSD conversion that is fully accessible and responsive on all different screen sizes. JavaScript and jQuery are used to make a drop-down menu for tablet and mobile views.</p>
-            <div class="link">
-              <a href="https://sarahmgans.github.io/sarahmGansProjectTwo/home.html" target="_blank" rel="noreferrer">Live</a>
-              <a href="https://github.com/sarahmgans/sarahmGansProjectTwo" target="_blank" rel="noreferrer">Github</a>
-            </div>
-          </div>
+        <div class="eventLine">
+          <p>Please check back again soon.</p>
         </div>
       </div>
     </section>
@@ -202,7 +118,6 @@
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
         <h2>Contact</h2>
         <div class="bodyLine"></div>
-        <p class="working">It would be great to hear from you if you'd like to talk and/or work together.</p>
         <!-- Form -->
         <form action="https://formspree.io/mnqgndek" method="POST">
           <div class="formParent">
@@ -225,15 +140,7 @@
         </form>
         <!-- Other Contact Info -->
         <div class="phone">
-          <a href="mailto:sarahmgans@gmail.com">sarahmgans@gmail.com</a>
-          <a href="https://calendly.com/sarahgans" class="calendly">calendly.com/sarahgans</a>
-        </div>
-        <div class="social">
-          <a href="https://twitter.com/sarahmgans" target="_blank" rel="noreferrer" aria-hidden="true">
-          <i class="fab fa-twitter"></i>
-          <span class="sr-only">Twitter</span></a>
-          <a href="https://github.com/sarahmgans" target="_blank" rel="noreferrer" aria-hidden="true"><i class="fab fa-github"></i><span class="sr-only">Github</span></a>
-          <a href="https://www.linkedin.com/in/sarah-gans/" target="_blank" rel="noreferrer" aria-hidden="true"><i class="fab fa-linkedin-in"></i><span class="sr-only">LinkedIn</span></a>
+          <a href="mailto:laurazacharin@rogers.com">laurazacharin@rogers.com</a>
         </div>
       </div>
     </section>
@@ -241,7 +148,7 @@
   <!-- Footer -->
   <footer>
     <div class="wrapper">
-      <p>© Sarah Gans | 2020</p>
+      <p>© Laura Zacharin | 2021</p>
     </div>
   </footer>
 <!-- Tag for Animate on Scroll -->
