--- a/index.html
+++ b/index.html
@@ -86,15 +86,7 @@
         <!-- Paragraph About Me -->
         <div>
           <h3>We Are the Repositories</h3>
-          <p>Deep in the meat of  this chewed up dogball   your amygdalaa tangle of  grunts and turns   blindloops crammed</p>
-          <p>into this pair of  shrivelled almonds between a rock and a hard placebetween prefrontal cortex and hippocampus   dense like gravity   taut</p>
-          <p>like the windings of  golfball innards   back and forth across suburban streets   loop after loop of  rubber strand stretched</p>
-          <p>from tree to tree in the spirit of  fun   just to see what would happen   unsuspecting drivers asleep</p>
-          <p>at the wheel   oblivious behind shatterproof  glass   ambushedby the skirl of  rubber band   its blowback</p>
-          <p>by a thing you’d best forgotten   thought you had   the smell of  talcum powder   cardamom and clove   five hummed notes “Killing Me Softly”</p>
-          <p>you can’t quite remember the words   a warm tomato   pink peachover a kitchen sink   chin dripping juice   sun through small</p>
-          <p>streaked window   lacy white curtain in a breeze   laughteryou almost recognize   a tone of  voice   an inflection   I’ve heard that some-</p>
-          <p>where   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpledon a basement bookshelf   newspages flapping  in a tree</p>
+          <p>Deep in the meat of  this chewed up dogball   your amygdalaa tangle of  grunts and turns   blindloops crammed<br>into this pair of  shrivelled almonds between a rock and a hard placebetween prefrontal cortex and hippocampus   dense like gravity   taut<br>like the windings of  golfball innards   back and forth across suburban streets   loop after loop of  rubber strand stretched<br>from tree to tree in the spirit of  fun   just to see what would happen   unsuspecting drivers asleep<br>at the wheel   oblivious behind shatterproof  glass   ambushedby the skirl of  rubber band   its blowback<br>by a thing you’d best forgotten   thought you had   the smell of  talcum powder   cardamom and clove   five hummed notes “Killing Me Softly”<br>you can’t quite remember the words   a warm tomato   pink peachover a kitchen sink   chin dripping juice   sun through small<br>streaked window   lacy white curtain in a breeze   laughteryou almost recognize   a tone of  voice   an inflection   I’ve heard that some-<br>where   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpledon a basement bookshelf   newspages flapping  in a tree</p>
         </div>
         <!-- Photo of Me-->
         <div class="picture">
@@ -119,7 +111,7 @@
         <h2>Contact</h2>
         <div class="bodyLine"></div>
         <!-- Form -->
-        <form action="https://formspree.io/mnqgndek" method="POST">
+        <form action="https://formspree.io/f/xeqvjzaq" method="POST">
           <div class="formParent">
             <div class="half">
               <label for="name" class="visuallyHidden">Name</label>
@@ -140,7 +132,6 @@
         </form>
         <!-- Other Contact Info -->
         <div class="phone">
-          <a href="mailto:laurazacharin@rogers.com">laurazacharin@rogers.com</a>
         </div>
       </div>
     </section>
