corrected sass file names

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="aboutParent">
         <!-- Paragraph About Me -->
         <div>
-          <p>Originally from Montreal Laura Zacharin currently lives in Toronto. In 2018 Laura completed her Creative Writing Certificate at University of Toronto’s School of Continuing Studies and received the Marina Nemat Poetry Award. She was a finalist in 2018 for The Malahat Review’s Far Horizons Poetry Contest. In 2017 she attended the Emerging Writer’s Intensive at the Banff Centre. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review and Juniper. Her first book Common Brown House Moths was published in September 2019 (Frontenac House).</p>
+          <p>Originally from Montreal, Laura Zacharin currently lives in Toronto. In 2018 Laura completed her Creative Writing Certificate at University of Toronto’s School of Continuing Studies and received the Marina Nemat Poetry Award. She was a finalist in 2018 for The Malahat Review’s Far Horizons Poetry Contest. In 2017 she attended the Emerging Writer’s Intensive at the Banff Centre. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review and Juniper. Her first book Common Brown House Moths was published in September 2019 (Frontenac House).</p>
         </div>
         <!-- Photo of Me-->
         <div class="picture">
@@ -78,25 +78,33 @@
       </div>
     </section>
     <!-- Skills Section -->
-    <section class="about" id="work">
+    <section class="work" id="work">
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
       <h2>Work</h2>
       <div class="bodyLine"></div>
       <div class="aboutParent">
-        <!-- Paragraph About Me -->
-        <div>
-          <h3>We Are the Repositories</h3>
-          <p>Deep in the meat of  this chewed up dogball   your amygdalaa tangle of  grunts and turns   blindloops crammed<br>into this pair of  shrivelled almonds between a rock and a hard placebetween prefrontal cortex and hippocampus   dense like gravity   taut<br>like the windings of  golfball innards   back and forth across suburban streets   loop after loop of  rubber strand stretched<br>from tree to tree in the spirit of  fun   just to see what would happen   unsuspecting drivers asleep<br>at the wheel   oblivious behind shatterproof  glass   ambushedby the skirl of  rubber band   its blowback<br>by a thing you’d best forgotten   thought you had   the smell of  talcum powder   cardamom and clove   five hummed notes “Killing Me Softly”<br>you can’t quite remember the words   a warm tomato   pink peachover a kitchen sink   chin dripping juice   sun through small<br>streaked window   lacy white curtain in a breeze   laughteryou almost recognize   a tone of  voice   an inflection   I’ve heard that some-<br>where   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpledon a basement bookshelf   newspages flapping  in a tree</p>
-        </div>
         <!-- Photo of Me-->
         <div class="picture">
           <img src="./assets/CommonBrownHousemoths.jpeg" alt="Photograph of Laura Zacharin">
+        </div>
+        <!-- Paragraph About Me -->
+        <div>
+          <h3>We Are the Repositories</h3>
+          <p>Deep in the meat of  this chewed up dogball   your amygdalaa<br>tangle of  grunts and turns   blindloops crammed</p>
+          <p>into this pair of  shrivelled almonds between a rock and a hard place<br>between prefrontal cortex and hippocampus   dense like gravity   taut</p>
+          <p>like the windings of  golfball innards   back and forth<br>across suburban streets   loop after loop of  rubber strand stretched</p>
+          <p>from tree to tree in the spirit of  fun   just to see<br>what would happen   unsuspecting drivers asleep</p>
+          <p>at the wheel   oblivious behind shatterproof  glass   ambushed<br>by the skirl of  rubber band   its blowback</p>
+          <p>by a thing you’d best forgotten   thought you had   the smell of  talcum<br>powder   cardamom and clove   five hummed notes “Killing Me Softly”</p>
+          <p>you can’t quite remember the words   a warm tomato   pink peach<br>over a kitchen sink   chin dripping juice   sun through small</p>
+          <p>streaked window   lacy white curtain in a breeze   laughter<br>you almost recognize   a tone of  voice   an inflection <i>I’ve heard that some-</p>
+          <p>where</i>   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpled<br>on a basement bookshelf   newspages flapping  in a tree</p>
         </div>
       </div>
       </div>
     </section>
     <!-- Projects Section -->
-    <section class="about" id="events">
+    <section class="events" id="events">
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
         <h2>Events</h2>
         <div class="bodyLine"></div>
