--- a/index.html
+++ b/index.html
@@ -77,30 +77,25 @@
       </div>
       </div>
     </section>
-    <!-- Skills Section -->
+    <!-- Work Section -->
     <section class="work" id="work">
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
       <h2>Work</h2>
-      <div class="bodyLine"></div>
-      <div class="aboutParent">
-        <!-- Photo of Me-->
-        <div class="picture">
-          <img src="./assets/CommonBrownHousemoths.jpeg" alt="Photograph of Laura Zacharin">
+        <div class="bodyLine"></div>
+        <div class="poem">
+          <div>
+            <h3>We Are the Repositories</h3>
+            <p>Deep in the meat of  this chewed up dogball   your amygdalaa<br>tangle of  grunts and turns   blindloops crammed</p>
+            <p>into this pair of  shrivelled almonds between a rock and a hard place<br>between prefrontal cortex and hippocampus   dense like gravity   taut</p>
+            <p>like the windings of  golfball innards   back and forth<br>across suburban streets   loop after loop of  rubber strand stretched</p>
+            <p>from tree to tree in the spirit of  fun   just to see<br>what would happen   unsuspecting drivers asleep</p>
+            <p>at the wheel   oblivious behind shatterproof  glass   ambushed<br>by the skirl of  rubber band   its blowback</p>
+            <p>by a thing you’d best forgotten   thought you had   the smell of  talcum<br>powder   cardamom and clove   five hummed notes “Killing Me Softly”</p>
+            <p>you can’t quite remember the words   a warm tomato   pink peach<br>over a kitchen sink   chin dripping juice   sun through small</p>
+            <p>streaked window   lacy white curtain in a breeze   laughter<br>you almost recognize   a tone of  voice   an inflection <i>I’ve heard that some-</p>
+            <p>where</i>   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpled<br>on a basement bookshelf   newspages flapping  in a tree</p>
+          </div>
         </div>
-        <!-- Paragraph About Me -->
-        <div>
-          <h3>We Are the Repositories</h3>
-          <p>Deep in the meat of  this chewed up dogball   your amygdalaa<br>tangle of  grunts and turns   blindloops crammed</p>
-          <p>into this pair of  shrivelled almonds between a rock and a hard place<br>between prefrontal cortex and hippocampus   dense like gravity   taut</p>
-          <p>like the windings of  golfball innards   back and forth<br>across suburban streets   loop after loop of  rubber strand stretched</p>
-          <p>from tree to tree in the spirit of  fun   just to see<br>what would happen   unsuspecting drivers asleep</p>
-          <p>at the wheel   oblivious behind shatterproof  glass   ambushed<br>by the skirl of  rubber band   its blowback</p>
-          <p>by a thing you’d best forgotten   thought you had   the smell of  talcum<br>powder   cardamom and clove   five hummed notes “Killing Me Softly”</p>
-          <p>you can’t quite remember the words   a warm tomato   pink peach<br>over a kitchen sink   chin dripping juice   sun through small</p>
-          <p>streaked window   lacy white curtain in a breeze   laughter<br>you almost recognize   a tone of  voice   an inflection <i>I’ve heard that some-</p>
-          <p>where</i>   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpled<br>on a basement bookshelf   newspages flapping  in a tree</p>
-        </div>
-      </div>
       </div>
     </section>
     <!-- Projects Section -->
