--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
             <p>streaked window   lacy white curtain in a breeze   laughter<br>you almost recognize   a tone of  voice   an inflection <i>I’ve heard that some-</p>
             <p>where</i>   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpled<br>on a basement bookshelf   newspages flapping  in a tree</p>
           </div>
+          <div class="buy">
+            <h4>From <span class="title">Common Brown House Moths</span> by Laura Zacharin</h4>
+            <a href="https://www.chapters.indigo.ca/en-ca/books/common-brown-house-moths/9781927823989-item.html">Buy Now</a>
+          </div>
         </div>
       </div>
     </section>
