--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="aboutParent">
         <!-- Paragraph About Me -->
         <div>
-          <p>Originally from Montreal, Laura Zacharin currently lives in Toronto. In 2018 Laura completed her Creative Writing Certificate at University of Toronto’s School of Continuing Studies and received the Marina Nemat Poetry Award. She was a finalist in 2018 for The Malahat Review’s Far Horizons Poetry Contest. In 2017 she attended the Emerging Writer’s Intensive at the Banff Centre. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review and Juniper. Her first book Common Brown House Moths was published in September 2019 (Frontenac House).</p>
+          <p>Originally from Montreal Laura Zacharin currently lives in Toronto. In 2018 Laura completed her Creative Writing Certificate at University of Toronto’s School of Continuing Studies and received the Marina Nemat Poetry Award. She was a finalist in 2018 for The Malahat Review’s Far Horizons Poetry Contest. In 2017 she attended the Emerging Writer’s Intensive at the Banff Centre. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review and Juniper. Her first book Common Brown House Moths was published in September 2019 (Frontenac House).</p>
         </div>
         <!-- Photo of Me-->
         <div class="picture">
@@ -97,7 +97,7 @@
           </div>
           <div class="buy">
             <h4>From <span class="title">Common Brown House Moths</span> by Laura Zacharin</h4>
-            <a href="https://www.chapters.indigo.ca/en-ca/books/common-brown-house-moths/9781927823989-item.html">Buy Now</a>
+            <a href="https://www.alpinebookpeddlers.ca/?searchtype=keyword&qs=Common+brown+house+moths&q=h.tviewer&using_sb=status&qsb=keyword" target="_blank">Buy Now</a>
           </div>
         </div>
       </div>
