fixed spacing at beginnings and ends of sections

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <ul class="nav bottom">
             <li><a href="#home" class="home">Home</a></li>
             <li><a href="#about" class="about">About</a></li>
-            <li><a href="#work" class="skills">Work</a></li>
+            <li><a href="#work" class="work">Work</a></li>
             <li><a href="#events" class="projects">Events</a></li>
             <li><a href="#contact" class="contact">Contact</a></li>
           </ul>
@@ -66,11 +66,11 @@
       <h2>About</h2>
       <div class="bodyLine"></div>
       <div class="aboutParent">
-        <!-- Paragraph About Me -->
+        <!-- Paragraph About -->
         <div>
           <p>Originally from Montreal Laura Zacharin currently lives in Toronto. In 2018 Laura completed her Creative Writing Certificate at University of Toronto’s School of Continuing Studies and received the Marina Nemat Poetry Award. She was a finalist in 2018 for The Malahat Review’s Far Horizons Poetry Contest. In 2017 she attended the Emerging Writer’s Intensive at the Banff Centre. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review and Juniper. Her first book Common Brown House Moths was published in September 2019 (Frontenac House).</p>
         </div>
-        <!-- Photo of Me-->
+        <!-- Photo -->
         <div class="picture">
           <img src="./assets/lauraZacharinPhoto.jpeg" alt="Photograph of Laura Zacharin">
         </div>
@@ -96,13 +96,13 @@
             <p>where</i>   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpled<br>on a basement bookshelf   newspages flapping  in a tree</p>
           </div>
           <div class="buy">
-            <h4>From <span class="title">Common Brown House Moths</span> by Laura Zacharin</h4>
+            <p>From <span class="title">Common Brown House Moths</span> by Laura Zacharin</p>
             <a href="https://www.alpinebookpeddlers.ca/?searchtype=keyword&qs=Common+brown+house+moths&q=h.tviewer&using_sb=status&qsb=keyword" target="_blank">Buy Now</a>
           </div>
         </div>
       </div>
     </section>
-    <!-- Projects Section -->
+    <!-- Events Section -->
     <section class="events" id="events">
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
         <h2>Events</h2>
@@ -137,9 +137,6 @@
           <button class="submit" type="submit">Send</button>
           </div>
         </form>
-        <!-- Other Contact Info -->
-        <div class="phone">
-        </div>
       </div>
     </section>
   </main>
