--- a/index.html
+++ b/index.html
@@ -84,19 +84,25 @@
         <div class="bodyLine"></div>
         <div class="poem">
           <div>
-            <h3>We Are the Repositories</h3>
-            <p>Deep in the meat of  this chewed up dogball   your amygdalaa<br>tangle of  grunts and turns   blindloops crammed</p>
-            <p>into this pair of  shrivelled almonds between a rock and a hard place<br>between prefrontal cortex and hippocampus   dense like gravity   taut</p>
-            <p>like the windings of  golfball innards   back and forth<br>across suburban streets   loop after loop of  rubber strand stretched</p>
-            <p>from tree to tree in the spirit of  fun   just to see<br>what would happen   unsuspecting drivers asleep</p>
-            <p>at the wheel   oblivious behind shatterproof  glass   ambushed<br>by the skirl of  rubber band   its blowback</p>
-            <p>by a thing you’d best forgotten   thought you had   the smell of  talcum<br>powder   cardamom and clove   five hummed notes “Killing Me Softly”</p>
-            <p>you can’t quite remember the words   a warm tomato   pink peach<br>over a kitchen sink   chin dripping juice   sun through small</p>
-            <p>streaked window   lacy white curtain in a breeze   laughter<br>you almost recognize   a tone of  voice   an inflection <i>I’ve heard that some-</p>
-            <p>where</i>   a cap on the back of  a chair   “Leaves of  Grass”   its spine crumpled<br>on a basement bookshelf   newspages flapping  in a tree</p>
+            <h3>To read a selection of Laura's poems, please click below:</h3>
+            <div class="buy">
+              <a href="https://longconmag.com/issue-9/laura-zacharin/" target="_blank">Long Con Magazine</a>
+            </div>
+            <div class="buy">
+              <a href="https://www.cfp.ca/content/67/1/e43" target="_blank">Canadian Family Physician</a>
+            </div>
+            <div class="buy">
+              <a href="https://juniperpoetry.com/volume-3-issue-2/" target="_blank">Juniper Poetry</a>
+            </div>
+            <div class="buy">
+              <a href="https://ojs.uwindsor.ca/index.php/windsor_review/issue/view/699" target="_blank">Windsor Review</a>
+            </div>
+            <div class="buy">
+              <a href="https://poets.ca/she-said-relax-by-laura-zacharin/" target="_blank">League of Canadian Poets Poetry Pause</a>
+            </div>
           </div>
           <div class="buy">
-            <p>From <span class="title">Common Brown House Moths</span> by Laura Zacharin</p>
+            <p><span class="title">Common Brown House Moths</span> by Laura Zacharin</p>
             <a href="https://www.alpinebookpeddlers.ca/?searchtype=keyword&qs=Common+brown+house+moths&q=h.tviewer&using_sb=status&qsb=keyword" target="_blank">Buy Now</a>
           </div>
         </div>
@@ -160,4 +166,3 @@ AOS.init({
 <script src="script.js"></script>
 </body>
 </html>
-
