--- a/index.html
+++ b/index.html
@@ -84,26 +84,26 @@
         <div class="bodyLine"></div>
         <div class="poem">
           <div>
-            <h3>To read a selection of Laura's poems, please click below:</h3>
-            <div class="buy">
+            <p>To read a selection of Laura's poetry, please click one of the links below</p>
+            <div class="link">
               <a href="https://longconmag.com/issue-9/laura-zacharin/" target="_blank">Long Con Magazine</a>
             </div>
-            <div class="buy">
+            <div class="link">
               <a href="https://www.cfp.ca/content/67/1/e43" target="_blank">Canadian Family Physician</a>
             </div>
-            <div class="buy">
+            <div class="link">
               <a href="https://juniperpoetry.com/volume-3-issue-2/" target="_blank">Juniper Poetry</a>
             </div>
-            <div class="buy">
+            <div class="link">
               <a href="https://ojs.uwindsor.ca/index.php/windsor_review/issue/view/699" target="_blank">Windsor Review</a>
             </div>
-            <div class="buy">
+            <div class="link">
               <a href="https://poets.ca/she-said-relax-by-laura-zacharin/" target="_blank">League of Canadian Poets Poetry Pause</a>
             </div>
           </div>
           <div class="buy">
-            <p><span class="title">Common Brown House Moths</span> by Laura Zacharin</p>
-            <a href="https://www.alpinebookpeddlers.ca/?searchtype=keyword&qs=Common+brown+house+moths&q=h.tviewer&using_sb=status&qsb=keyword" target="_blank">Buy Now</a>
+            <p>Laura's book, <span class="title">Common Brown House Moths</span>, is available through her publisher, Frontenac House Inc. </p>
+            <a href="https://www.frontenachouse.com/product/common-brown-house-moths/" target="_blank">Buy Now</a>
           </div>
         </div>
       </div>
