--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
       <h2>Work</h2>
         <div class="bodyLine"></div>
-        <div class="poem">
-          <div>
-            <p>To read a selection of Laura's poetry, please click one of the links below</p>
+            <div>
+            <p>To read a selection of Laura's poetry, please click one of the links below.</p>
             <div class="link">
               <a href="https://longconmag.com/issue-9/laura-zacharin/" target="_blank">Long Con Magazine</a>
             </div>
@@ -98,14 +97,13 @@
               <a href="https://ojs.uwindsor.ca/index.php/windsor_review/issue/view/699" target="_blank">Windsor Review</a>
             </div>
             <div class="link">
-              <a href="https://poets.ca/she-said-relax-by-laura-zacharin/" target="_blank">League of Canadian Poets Poetry Pause</a>
+              <a href="https://poets.ca/she-said-relax-by-laura-zacharin/" target="_blank">League of Canadian Poets</a>
             </div>
           </div>
           <div class="buy">
             <p>Laura's book, <span class="title">Common Brown House Moths</span>, is available through her publisher, Frontenac House Inc. </p>
             <a href="https://www.frontenachouse.com/product/common-brown-house-moths/" target="_blank">Buy Now</a>
           </div>
-        </div>
       </div>
     </section>
     <!-- Events Section -->
