--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
       <h2>Work</h2>
         <div class="bodyLine"></div>
-            <div>
-            <p>To read a selection of Laura's poetry, please click one of the links below.</p>
+          <div>
+            <p>Read:</p>
             <div class="link">
               <a href="https://longconmag.com/issue-9/laura-zacharin/" target="_blank">Long Con Magazine</a>
             </div>
@@ -98,6 +98,20 @@
             </div>
             <div class="link">
               <a href="https://poets.ca/she-said-relax-by-laura-zacharin/" target="_blank">League of Canadian Poets</a>
+            </div>
+          </div>
+          <div>
+            <p>Listen:</p>
+            <div class="link">
+              <a href="https://www.stitcher.com/show/eh-poetry-podcast-3-poems-read-3-times/episode/shhhhh-by-laura-zacharin-205654178" target="_blank">Shhhhh on Poetry Eh</a>
+          </div>
+          <div>
+            <p>Reviews:</p>
+            <div class="link">
+              <a href="https://freefallmagazine.ca/review-of-laura-zacharins-common-brown-house-moths/" target="_blank">Free Fall Magazine</a>
+            </div>
+            <div class="link">
+              <a href="Review: Common Brown House Moths by Laura Zacharin – League of Canadian Poets" target="_blank">League of Canadian Poets</a>
             </div>
           </div>
           <div class="buy">
