--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           <div class="buy">
             <p>Laura's book, <span class="title">Common Brown House Moths</span>, is available through her publisher, Frontenac House Inc. </p>
-            <a href="https://www.frontenachouse.com/product/common-brown-house-moths/" target="_blank">Buy Now</a>
+            <a href="https://www.frontenachouse.com/product/common-brown-house-moths/" target="_blank">Shop Now</a>
           </div>
       </div>
     </section>
