--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <!-- Photo -->
         <div class="picture">
-          <img src="./assets/lauraZacharinPhoto.jpeg" alt="Photograph of Laura Zacharin">
+          <img src="./assets/P1020055 (3).JPG" alt="Photograph of Laura Zacharin">
         </div>
       </div>
       </div>
