--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="aboutParent">
         <!-- Paragraph About -->
         <div>
-          <p>Originally from Montreal Laura Zacharin currently lives in Toronto. In 2018 Laura completed her Creative Writing Certificate at University of Toronto’s School of Continuing Studies and received the Marina Nemat Poetry Award. She was a finalist in 2018 for The Malahat Review’s Far Horizons Poetry Contest. In 2017 she attended the Emerging Writer’s Intensive at the Banff Centre. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review and Juniper. Her first book Common Brown House Moths was published in September 2019 (Frontenac House).</p>
+          <p>Laura Zacharin is the author of Common Brown House Moths (Frontenac House 2019), longlisted for the 2020 Gerald Lampert Award. She was the recipient of University of Toronto’s Marina Nemat Award for Poetry. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review, Prism, Arc Poetry, and other Canadian literary journals. She lives in Toronto, Canada.</p>
         </div>
         <!-- Photo -->
         <div class="picture">
