--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div>
             <p>Listen:</p>
             <div class="link">
-              <a href="https://www.stitcher.com/show/eh-poetry-podcast-3-poems-read-3-times/episode/shhhhh-by-laura-zacharin-205654178" target="_blank">Shhhhh on Poetry Eh</a>
+              <a href="https://www.stitcher.com/show/eh-poetry-podcast-3-poems-read-3-times/episode/shhhhh-by-laura-zacharin-205654178" target="_blank">Poetry Eh</a>
           </div>
           <div>
             <p>Reviews:</p>
