--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <h2>Work</h2>
         <div class="bodyLine"></div>
           <div>
-            <p>Read:</p>
+            <p class="heading">Read</p>
             <div class="link">
               <a href="https://longconmag.com/issue-9/laura-zacharin/" target="_blank">Long Con Magazine</a>
             </div>
@@ -101,12 +101,12 @@
             </div>
           </div>
           <div>
-            <p>Listen:</p>
+            <p class="heading">Listen</p>
             <div class="link">
               <a href="https://www.stitcher.com/show/eh-poetry-podcast-3-poems-read-3-times/episode/shhhhh-by-laura-zacharin-205654178" target="_blank">Poetry Eh</a>
           </div>
           <div>
-            <p>Reviews:</p>
+            <p class="heading">Reviews</p>
             <div class="link">
               <a href="https://freefallmagazine.ca/review-of-laura-zacharins-common-brown-house-moths/" target="_blank">Free Fall Magazine</a>
             </div>
