--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="aboutParent">
         <!-- Paragraph About -->
         <div>
-          <p>Laura Zacharin is the author of Common Brown House Moths (Frontenac House 2019), longlisted for the 2020 Gerald Lampert Award. She was the recipient of University of Toronto’s Marina Nemat Award for Poetry. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review, Prism, Arc Poetry, and other Canadian literary journals. She lives in Toronto, Canada.</p>
+          <p>Laura Zacharin is the author of <span class="title">Common Brown House Moths</span> (Frontenac House 2019), which was longlisted for the 2020 Gerald Lampert Award. She was the recipient of University of Toronto’s Marina Nemat Award for Poetry. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review, Prism, Arc Poetry, and other Canadian literary journals. She lives in Toronto, Canada.</p>
         </div>
         <!-- Photo -->
         <div class="picture">
@@ -115,7 +115,7 @@
             </div>
           </div>
           <div class="buy">
-            <p>Laura's book, <span class="title">Common Brown House Moths</span>, is available through her publisher, Frontenac House Inc. </p>
+            <p>Laura's book, <span class="title">Common Brown House Moths</span>, is available through her publisher, Frontenac House Inc. It can also be purchased from her directly by filling out the contact form at the bottom of this page.</p>
             <a href="https://www.frontenachouse.com/product/common-brown-house-moths/" target="_blank">Shop Now</a>
           </div>
       </div>
