--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="aboutParent">
         <!-- Paragraph About -->
         <div>
-          <p>Laura Zacharin is the author of <span class="title">Common Brown House Moths</span> (Frontenac House 2019), which was longlisted for the 2020 Gerald Lampert Award. She was the recipient of University of Toronto’s Marina Nemat Award for Poetry. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review, Prism, Arc Poetry, and other Canadian literary journals. She lives in Toronto, Canada.</p>
+          <p>Laura Zacharin is the author of <span class="title">Common Brown House Moths</span> (Frontenac House Inc., 2019), which was longlisted for the 2020 Gerald Lampert Award. She was the recipient of University of Toronto’s Marina Nemat Award for Poetry. Her poetry has appeared in The Fiddlehead, CV2, The Malahat Review, Prism, Arc Poetry, and other Canadian literary journals. She lives in Toronto, Canada.</p>
         </div>
         <!-- Photo -->
         <div class="picture">
@@ -126,7 +126,7 @@
         <h2>Events</h2>
         <div class="bodyLine"></div>
         <div class="eventLine">
-          <p>Please check back again soon.</p>
+          <p>Please check back again soon for upcoming events.</p>
         </div>
       </div>
     </section>
