--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
           </div>
           <div class="buy">
-            <p>Laura's book, <span class="title">Common Brown House Moths</span>, is available through her publisher, Frontenac House. It can also be purchased from her directly by filling out the contact form at the bottom of this page.</p>
+            <p>Laura's book, <span class="title">Common Brown House Moths</span>, is available through her publisher Frontenac House. It can also be purchased from her directly by filling out the contact form at the bottom of this page.</p>
             <a href="https://www.frontenachouse.com/product/common-brown-house-moths/" target="_blank">Shop Now</a>
           </div>
       </div>
