--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       <div class="wrapper" data-aos="fade-up" data-aos-duration="1000">
         <h2>Events</h2>
         <div class="bodyLine"></div>
-        <div class="eventLine">
-          <p>Please check back again soon for upcoming events.</p>
+        <div class="see">
+          <p>You can see Laura read at <a href="https://www.artbarpoetryseries.com/post/upcoming-events-2022" target="_blank">Art Bar</a> on January 24th, 2022.</p>
         </div>
       </div>
     </section>
